# Note: keep this file in wiki format for easy pasting to the proto-ch wiki
# Note: keep milestone bullets in ticket numerical order for easier
#       reconciliation at release time

= GENI Portal Release Notes =

== 2.26 ==
 * Add scroll bars and standard canvasOptions/constraints to popup rspec  
   editors (#1266)
 * Add footer, and internal and expanded views for geo map. (#1264).
 * Support 'expanded' (much higher, full-width) Jacks viewer and editor (#1233)
  * Add missing scrollbar on 'View RSpec' in Jacks. (#1248)
 * Support matching on sliver_id for exosm resources status in Jacks (#1231)
 * Add CloudLab button to home page tools list (#1263) 
 * Remove warning about IdP has no affiliation for EPPN 
     (which is optional) (#1269).
 * Add rspec viewer and node selection to rspec viewer in profile (#1237)
 * Add aggregate category 'Federated'. (#1239)
 * Combine status and details pages, eliminate status buttons (#1043)
  * Remove per aggregate Jacks viewer on details page
  * Show sliver expiration on combined status/details page (#1107)
  * Show/hide raw status on combined status/details page (#1273).
  * Align status text and status table header (#1276)
  * Decouple showing status from deetails (make them siblings not 
     hierarchical (#1275).
  * Allow leading/trailing whitespace in URL in 
    slice-add-resource-jacks.js (#1277)

== 2.25 ==
 * Allow for editing RSpecs in the Profile Manage RSpecs page using Jacks
   editor. (#1143).
 * Name downloaded request rspec with slice name (#1204)
 * Add aggregate category 'Experimental'. (#1239)
 * Support multiple nodes with same client_id from different AMs in SSH (#1257)
 * Support multiple nodes with same client_id from different AMs
   for AM API calls (#1258)
 * Add a geographic map view of the resources in a given slice. See
   the "Geo View" button on the Slice Jacks page. (#1260)
 * Update copyrights to 2015. (#1261)
 * Support Delete in Jacks App with multiple manifests